--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-recorder",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A react component that records audio using the MediaRecorder API",
   "main": "lib/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "MediaRecorder"
   ],
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^16.0.0"
   },
   "author": "Alex Grasley",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "react": "^15.2.1",
+    "react": "^16.0.0",
     "rimraf": "^2.5.3"
   }
 }
