--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-recorder",
   "version": "2.0.0",
   "description": "A react component that records audio using the MediaRecorder API",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf lib && babel ./src -d lib"
